[package]
name = "serf-rpc"
version = "0.1.0"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features=["std", "derive"] }
rmp-serde = "0.15.4"
futures = {version="0.3.12"}
crossbeam = "0.8.0"
rmp = "0.8.10"
