[package]
name = "serf-rpc"
version = "0.2.0"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"
repository = "https://github.com/benaubin/serf-rs"
license = "MIT"
description = "A client library for Hashicorp's Serf (https://serf.io)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features=["std", "derive"] }
rmp-serde ={version= "0.15.4", features=["serde128"]}
futures = {version="0.3.12"}
rmp = "0.8.10"

[dev-dependencies]
tokio = { version = "1.2.0", features=["full"] }
